@@ -139,6 +139,12 @@
 	* ld-ifunc/ifunc-14d-i386.d: Likewise.
 	* ld-ifunc/ifunc-14d-x86-64.d: Likewise.
 
+2012-12-14  Yufeng Zhang  <yufeng.zhang@arm.com>
+
+        * ld-elf/indirect.exp: Disable if -shared is not supported.
+        * lib/ld-lib.exp (check_shared_lib_support): Add aarch64*-*-elf and
+        arm*-*-elf to the exclude list.
+
 2012-11-30  Roland McGrath  <mcgrathr@google.com>
 
 	* ld-elf/ehdr_start.s: Put reference in .rodata section, not .data.
